mr tube section progression

--- a/Thesis/data_extraction/data_extraction.tex
+++ b/Thesis/data_extraction/data_extraction.tex
@@ -6,12 +6,13 @@ measurement, while others would require us to extract information from various t
 measurements. In this chapter we will discuss how we obtain each measurements and algorithm involved in those
 processes.
 
-\section{Tubes}
-\label{tubes}
-
 \section{Water Tank}
 \label{ct_tank}
 \input{data_extraction/ct_tank}
+
+\section{MR Tubes}
+\label{tubes}
+\input{data_extraction/mr_tubes}
 
 \section{Water Tank MRI}
 \label{mri_tank}
