--- a/Thesis/introduction/intro.tex
+++ b/Thesis/introduction/intro.tex
@@ -1,38 +1,38 @@
 \section{Thesis Overview}
 
-Magnetic resonance imaging (MRI) provides an excellent modality for distinguishing different tissues 
-in the human body, which makes 
-this modality essential for medical applications. MRI can also be used for treatment planning of 
-medical procedures that require a great degree of geometrical accuracy such as  
-functional radiosurgery~\cite{Kond99}. Unfortunately, the accuracy of MRI for medical targeting applications 
-is compromised by the presence of geometric distortions such as non-linearities of the magnetic gradient 
-fields or inhomogeneities of the scanner main field 
-~\cite{Dor05,LSS06a,LSS06b,LSS08a,LSS08b,Lang99,Wang04a,Wang04b}. 
-Gradient nonlinearities can cause over 2mm of distortion to the location of features in the 
+Magnetic resonance imaging (MRI) provides an excellent modality for distinguishing different tissues
+in the human body, which makes
+this modality essential for medical applications. MRI can also be used for treatment planning of
+medical procedures that require a great degree of geometrical accuracy such as
+functional radiosurgery~\cite{Kond99}. Unfortunately, the accuracy of MRI for medical targeting applications
+is compromised by the presence of geometric distortions such as non-linearities of the magnetic gradient
+fields or inhomogeneities of the scanner main field
+~\cite{Dor05,LSS06a,LSS06b,LSS08a,LSS08b,Lang99,Wang04a,Wang04b}.
+Gradient nonlinearities can cause over 2mm of distortion to the location of features in the
 image~\cite{LSS08b,Lang99}.
 
-% Modern MRI scanners have built-in distortion correction algorithms, that rely on knowledge of the magnetic 
-% field configuration and its distortion. Built-in algorithms, which are usually proprietary, are designed 
-% based on assumed knowledge of the geometry and location of the gradient coils. A more practical approach is 
-% to use a phantom of known geometry and to derive the distortion by analyzing the MRI images generated with 
-% such a phantom ~\cite{Dor05,LSS06a,LSS06b,LSS08a,LSS08b,Lang99,Wang04a,Wang04b}. 
-% This method has the advantage that a scanner-specific correction can be applied, which can also take into 
+% Modern MRI scanners have built-in distortion correction algorithms, that rely on knowledge of the magnetic
+% field configuration and its distortion. Built-in algorithms, which are usually proprietary, are designed
+% based on assumed knowledge of the geometry and location of the gradient coils. A more practical approach is
+% to use a phantom of known geometry and to derive the distortion by analyzing the MRI images generated with
+% such a phantom ~\cite{Dor05,LSS06a,LSS06b,LSS08a,LSS08b,Lang99,Wang04a,Wang04b}.
+% This method has the advantage that a scanner-specific correction can be applied, which can also take into
 % account potential changes in the gradient fields over time.
 
-% Accurate knowledge of the gradient isocenter is essential to very accurate distortion correction methods, 
-% To our knowledge, existing distortion correction algorithms, both built-in and phantom based, 
-% make the assumption that the gradient isocenter coincides with the origin of the DICOM coordinates. 
+% Accurate knowledge of the gradient isocenter is essential to very accurate distortion correction methods,
+% To our knowledge, existing distortion correction algorithms, both built-in and phantom based,
+% make the assumption that the gradient isocenter coincides with the origin of the DICOM coordinates.
 % This assumption may not be accurate and should not be used if a high degree of accuracy is necessary.
 
-% The goal of this work was to develop and implement a numerical software-based method to estimate the gradient 
-% isocenter of the magnetic field inside an MRI scanner using the MRI scan of a custom-built phantom.  
+% The goal of this work was to develop and implement a numerical software-based method to estimate the gradient
+% isocenter of the magnetic field inside an MRI scanner using the MRI scan of a custom-built phantom.
 % In our previous work~\cite{LSS06a,LSS06b,LSS08a,LSS08b}, we used an oil filled plexiglas cube with
-% 159.50mm $\times$ 159.70mm $\times$ 158.11mm dimension that was designed to fit MR scanners that were 
-% available at that time.  Current MRI scanners have a significantly wider aperture, which necessitates 
-% a larger phantom to characterize the field distortion.  Furthermore, since the lower part of the scanner 
-% aperture is occupied by the scanner table, the scanning area occupied by the phantom or the patient is not 
-% centered on the gradient isocenter, making correction methods that assume that the phantom is centered with 
-% respect to the gradient isocenter~\cite{LSS06a,LSS06b,LSS08a,LSS08b,Lang99} obsolete and potentially 
+% 159.50mm $\times$ 159.70mm $\times$ 158.11mm dimension that was designed to fit MR scanners that were
+% available at that time.  Current MRI scanners have a significantly wider aperture, which necessitates
+% a larger phantom to characterize the field distortion.  Furthermore, since the lower part of the scanner
+% aperture is occupied by the scanner table, the scanning area occupied by the phantom or the patient is not
+% centered on the gradient isocenter, making correction methods that assume that the phantom is centered with
+% respect to the gradient isocenter~\cite{LSS06a,LSS06b,LSS08a,LSS08b,Lang99} obsolete and potentially
 % inaccurate.
 
 % \begin{figure}[htb]
@@ -43,67 +43,67 @@ image~\cite{LSS08b,Lang99}.
 %     \centerline{}\medskip
 %   \end{minipage}
 %   \caption{A phantom cube made of plexiglas and filled with oil is ready for scanning} \label{fig:1}
-% \end{figure} 
+% \end{figure}
 
-The primary purpose of this thesis was to improve the distortion correction method developed in a previous 
+The primary purpose of this thesis was to improve the distortion correction method developed in a previous
 thesis \cite{tom}.  To do this, the following issues were addressed in this work:
 \begin{itemize}
-\item A new phantom was designed that can capture the distortion in modern 3-Tesla(T) MRI scanner. 
+\item A new phantom was designed that can capture the distortion in modern 3-Tesla(T) MRI scanner.
 \item Algorithms were developed that can extract relevant data points from the MR images of the new phantom.
-\item An new algorithm was developed that can accurately estimate the gradient isocenter of the magnetic 
+\item An new algorithm was developed that can accurately estimate the gradient isocenter of the magnetic
   field inside 3T MRI scanners.
-\item An algorithm was developed that can determine the undistortion paramters, which can then be used to 
+\item An algorithm was developed that can determine the undistortion paramters, which can then be used to
   generate undistorted MR images.
 % \item An algorithm was developed that can accurately estimate the undistortion paramters,
 %   which could then be used to generate undistorted MR images.
 \end{itemize}
 
-% background 
-The thesis is organized as follows. After the introduction, Chapter 2 gives background information on MRI, 
-it's geometric distortion, and approaches to corrected. 
-Chapter 3 describe the design details of the new phantom and several phases and changes the design 
+% background
+The thesis is organized as follows. After the introduction, Chapter 2 gives background information on MRI,
+it's geometric distortion, and approaches to corrected.
+Chapter 3 describe the design details of the new phantom and several phases and changes the design
 went through. The main feature of the final design of the phantom and their importance will be discussed.
 The next chapter discusses the algorithm for estimation of  gradient isocenter based on new
 phantom design. % Since there is no way to know the accurate location of isocenter inside MRI scanner, not even
-% the manufacture themselves, we will analyze our result using a simulate data points. 
+% the manufacture themselves, we will analyze our result using a simulate data points.
 Chapter 5 describe a series of algorithms used to extract relevant data from MR and CT images. CT images were
 used in this work to obtain accurate dimensions inside the phantom.
 % After isocenter algorithm we will start to discuss a series of algorithms we used to extract data points
 % from MR images and CT images. CT images is used for measuring certain dimensions inside phantom due to
-% limitations of manufacture's macine. 
-Chapter 6 describes the procedure to estimate the parameters of the model that undistorts the distorted 
+% limitations of manufacture's macine.
+Chapter 6 describes the procedure to estimate the parameters of the model that undistorts the distorted
 MR images. The final chapter summarizes the main results and suggests future work.
-% In the final chapter, putting everything together, 
+% In the final chapter, putting everything together,
 % we are using the geometric feature of the phantom and information
 % obtained from MR images to estimating a undistortion parameter that can transform the distorted MR images
 % back to undistorted images.
 
 \section{Background}
 
-The research project associated with this thesis relates to the correction of MRI images that will be used 
+The research project associated with this thesis relates to the correction of MRI images that will be used
 for functional proton radiosurgery at Loma Linda University Medical Center (LLUMC).
 The clinical application of protons was first suggested over 60 years ago \cite{Wil46}.
 The ability to penetrate human tissue, delivering high dosage of proton beams at a target
-region and being able to concentrate on a very small target area make protons ideal for use in noninvasive 
+region and being able to concentrate on a very small target area make protons ideal for use in noninvasive
 surgery \cite{Wil46}. Currently, Loma Linda University
 Medical Center (LLUMC) is using proton beams to treat patients with tumors or
 vascular malformations in the brain.
 
-Due to the effectiveness of proton radiosurgery, a new system is proposed thatl targets functional 
-disorders in the brain, such as trigeminal neuralgia and Parkiinson's disease by creating small lesions in 
+Due to the effectiveness of proton radiosurgery, a new system is proposed that targets functional
+disorders in the brain, such as trigeminal neuralgia and Parkinson's disease by creating small lesions in
 the brain regions affected by the disease.
 % Due to the effectiveness of proton radiosurgery, a new system is proposed to treat
 % even smaller targets, more specifically, cranial targets.  However, this requires higher
-% accuracy of the treatment system. 
-The current system can treat targets as small as 1 to 3 cm.  
+% accuracy of the treatment system.
+The current system can treat targets as small as 1 to 3 cm.
 Target localization is accomplished using CT and projection angiography.
-% In order to achieve higher accuracy, MRI is to be used for target localization in the new system. 
+% In order to achieve higher accuracy, MRI is to be used for target localization in the new system.
 MRI will to be used for target localization in the new system.
 The major obstacle of using MRI is the geometric distortion on MRI images caused by the nonlinearity of the magnetic gradient fields of the scanner.
-% The major obstacle of using MRI is the gradient nonlinear distortion on MRI images caused by the magnetic 
+% The major obstacle of using MRI is the gradient nonlinear distortion on MRI images caused by the magnetic
 % field of the scanner.
 
-For the proposed application, two of the most important requirements for a successful distortion 
+For the proposed application, two of the most important requirements for a successful distortion
 correction are:
 \begin{enumerate}
 \item The distortion correction must have submillimeter accuracy.
@@ -114,8 +114,8 @@ correction are:
 
 %The iteracy that this work is based on presented gradient nonlinearity correction method based on a cubic phantom MRI data set\cite{tom}.
 
-This work is based on a published method for gradient nonlinearity correction using a cubic phantom MRI data set [French article], which was also subject of a previous thesis \cite{tom}.
-% This work is based on a published method for gradient nonlinearity correction using a cubic phantom MRI data set \cite{tom}. 
+This work is based on a published method for gradient nonlinearity correction using a cubic phantom MRI data set \cite{Lang99}, which was also subject of a previous thesis by Tom S. Lee \cite{tom}.
+% This work is based on a published method for gradient nonlinearity correction using a cubic phantom MRI data set \cite{tom}.
 The published method utilizes the sum of spherical
 harmonics to model the geometrically warped planes of the cube, and applies the model
 to correct arbitrary image sets acquired with the same scanner. The cube is
@@ -141,25 +141,25 @@ Several assumptions are made for this model:
 \begin{itemize}
   \item The phantom is (reasonably) centered with respect to the gradient isocenter of the scanner.
   \item The distortion is (reasonably) symmetric for each pair of faces.
-  \item The origin of the DICOM patient coordinate system conincides with the position of the gradient 
+  \item The origin of the DICOM patient coordinate system conincides with the position of the gradient
     isocenter.
 \end{itemize}
 
 
 % However, positioning the phantom with respect to gradient isocenter is very difficult,
 % making it nearly impossible to perfectly center the phantom. After performing numerous
-% scans by Permedics Inc and LLUMC over the past several years, the issue of phantom centering has been 
+% scans by Permedics Inc and LLUMC over the past several years, the issue of phantom centering has been
 % identified
 % as a crucial factor in the quality of image data.  Improper centering of the phantom
 % in the scanner produces strong asymmetry in the phantom surfaces, thereby affecting the
 % accuracy of the distortion correction.  Therefore, the assumption that the distortion
 % is symmetric for each pair of phantom faces is invalid.
 
-In reality, however, these assumptions are not valid. Due to the geometry of the MR scanner, 
-the phantom cannot be centered, and the phantom center will always we located in the upper half of the 
-circular scanning plane. The issue of phantom centering has been identified as a crucial factor in the 
-quality of distortion correction. Improper centering of the phantom in the scanner produces strong asymmetry 
-in the phantom surfaces, thereby violating the asumption of symmetry of the distortion.
+In reality, however, these assumptions are not valid. Due to the geometry of the MR scanner,
+the phantom cannot be centered, and the phantom center will always we located in the upper half of the
+circular scanning plane. The issue of phantom centering has been identified as a crucial factor in the
+quality of distortion correction. Improper centering of the phantom in the scanner produces strong asymmetry
+in the phantom surfaces, thereby violating the assumption of symmetry of the distortion.
 
 % The assumption that the origin of the DICOM patient coordinate system corresponds to the isocenter of the magnetic field in the MRI scanner is also invalid. Siemens
 % engineers have confirmed that the true location of the gradient isocenter is unknown.
@@ -171,11 +171,11 @@ The assumption that the origin of the DICOM patient coordinate system correspond
 % computation and final correction, average takes about 20-30 minutes.  In some cases, the calculation
 % could require as much as 40 minutes. This is far from the ideal 15 minutes requirement for clinical use.
 
-In addition, with the introduction of the new 3T MR scanner with a larger bore, the previous phantom, which was designed for a 1.5 T scanner with a much smaller bore, turned out to be inadequate. The new scanner had only minimal distortion in the area probed by the orginal phantom with 16 cm diameter. A larger phantom was clearly needed that also better probed the circular field of view of the scanner.
+In addition, with the introduction of the new 3T MR scanner with a larger bore, the previous phantom, which was designed for a 1.5 T scanner with a much smaller bore, turned out to be inadequate. The new scanner had only minimal distortion in the area probed by the original phantom with 16 cm diameter. A larger phantom was clearly needed that also better probed the circular field of view of the scanner.
 
 \section{Significance}
 
-% Medical Significance 
+% Medical Significance
 Geometric distortions are critical for the use of MRI in accurate medical targeting. Procedures such as functional proton radiosurgery that deliver very high doses to small targets very accurate targeting is an absolute requirement. The built-in distortion correction of modern MRI scanners is probably not accurate enough for such procedures, and distortion correction methods that are based on measurements of the nonlinearity in the actual scanner are needed. With the work accomplished in this thesis, we have come a step closer to using MRI for such procedures. The phantom and algorithms developed will also be useful for other neurosurgical procedures that use MRI as the basis for accuate targeting.
 
 % % Which equation are you referring to here?  It would be better to reference the equation, instead of saying "the equation above"
@@ -208,8 +208,8 @@ Geometric distortions are critical for the use of MRI in accurate medical target
 % % To collect the data sets, a new phantom (Fig \ref{fig:2}), is proposed to capture data points on only the corner sections
 % % of the original phantom cube.  Since these sections are located far away from the gradient isocenter, they will exhibit the largest amount
 % % of distortion when compared to other sections closer to the gradient isocenter. The image slices that
-% % would be used are those close to each surface of the phantom. For each of these images a 
-% % filtering process will be applied to obtain only data points on the edge of phantom cube. 
+% % would be used are those close to each surface of the phantom. For each of these images a
+% % filtering process will be applied to obtain only data points on the edge of phantom cube.
 
 % % \begin{figure}[htb]
 % %   \begin{minipage}{0.80\linewidth}
@@ -221,7 +221,7 @@ Geometric distortions are critical for the use of MRI in accurate medical target
 % %   \caption{The new phantom, designed to collect data at the corners of the MRI scan.}  \label{fig:2}
 % % \end{figure}
 
-% % The reason for constructing a new phantom is that a phantom cube larger than original size (159.50 mm x 159.70 mm x 158.11 mm) is needed to 
+% % The reason for constructing a new phantom is that a phantom cube larger than original size (159.50 mm x 159.70 mm x 158.11 mm) is needed to
 % % capture the distortion of larger MRI scanner while the manufacturer who produced the original
 % % phantom cube was having difficulty produce an accurate cubic phantom larger than the
 % % one shown in \ref{fig:1}. The eight parts, shown in fig \ref{fig:2}, will be interconnected and placed inside a water tank for scanning.
