--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -67,7 +67,7 @@
 % \input{overview/main}
 
 % algorithm overviews
-% canny, peakdet, dicom coordinate conversion etc
+% canny, peakdet, steepest descent, dicom coordinate conversion etc
 
 \Chapter{Phantom Design}
 \label{phantom_design}
