correction parameter estimation roughly done.

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -3,6 +3,7 @@
 \usepackage{listings}
 \usepackage{color} % color
 \usepackage{amsmath}
+\usepackage{breqn}
 \definecolor{listinggray}{gray}{0.9}
 
 % \IncludeFig{caption}{label}{file}{scale}
@@ -81,7 +82,9 @@
 \label{data_extraction}
 \input{data_extraction/data_extraction}
 
-\Chapter{Parameter Estimation}
+\Chapter{Parameters Calculation}
+\label{parameters_calculation}
+\input{parameters/parameters_main}
 
 % \Chapter{Verification}
 \Chapter{Summery and Conclusion}
