--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -46,7 +46,9 @@
 \CSUSBDate{July 2013}
 \Copyright
 
-\AbstractText{abstract contents}
+\AbstractText{Magnetic Resonance Imaging (MRI) provides an excellent modality for distinguishing different tissues in the human body, which makes this modality essential for medical applications. MRI can also be used for treatment planning of medical procedures that require a great degree of geometrical accuracy such as functional radiosurgery. Unfortunately, the accuracy of MRI for medical targeting applications is compromised by the presence of geometric distortions such as non-linearities of the magnetic gradient fields or inhomogeneities of the scanner main field. \\
+	The goal of this work was to develop and implement a numerical software-based method to estimate the gradient isocenter of the magnetic field inside an 3-Tesla(T) MRI scanner using the MRI scan of a custom-built phantom.  A new phantom has been designed from scratch to capture the distortions inside 3T MRI scanner. Several algorithms have also been develop to calculate the gradient isocenter of the 3T MRI scanner's magnetic field, extract relevant data points from the MR and CT images of new phantom and compute the undistortion parameters.abstract contents}
+
 \AcknowledgementText{}
 \DedicationText{To Zel and Septimus.}
 
