bacground write up

--- a/Thesis/data_extraction/mri_tank.tex
+++ b/Thesis/data_extraction/mri_tank.tex
@@ -2,7 +2,7 @@
 \subsection{Introduction}
 Naturally due to the similarity of MR image and CT images, one can imagine that we shall reuse the algorithm
 we used to estimate water tank surfaces in CT images in MR images. However there are following challanges:
-\begin{enumerage}
+\begin{enumerate}
   \item MR images' quality is not as good as CT images. Espeically the water tank appeared at lower portion
     of images. That portion of the phantom is not completely inside the head coil, so the signals from that
     portion of the phantom contains a lot of noises. With that amount of noises, algorithm we used in CT 
