--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -4,6 +4,7 @@
 \usepackage{color} % color
 \usepackage{amsmath}
 \usepackage{breqn}
+\usepackage{xfrac}
 \definecolor{listinggray}{gray}{0.9}
 
 % \IncludeFig{caption}{label}{file}{scale}
@@ -64,6 +65,7 @@
 
 \Chapter{Background}
 \label{background}
+\input{background/background}
 
 % \Chapter{Overview}
 % \label{overview}
